--- a/Week4/Exercise2/exercise_two.css
+++ b/Week4/Exercise2/exercise_two.css
@@ -1,4 +1,32 @@
-table {
-	text-align: center;
-	font-family: sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+body {
+	font-family: 'Roboto', sans-serif;
+}
+
+div#player {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 0.5em 0;
+	border: 1px solid #eee;
+}
+
+div#player span {
+	padding: 0.2em;
+}
+
+div#player span img {
+	border-radius: 10px;
+}
+
+#menu {
+	width: 30%;
+	display: flex;
+	justify-content: space-between;
+	padding: 0;
+}
+
+#menu div img {
+	border-radius: 10px;
 }
